Change github desktop icon color

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@
     --profile__social-default-color: #4c4c4ccc;
     --linkedin-color: #0e76a8;
     --github-color: #181717;
-    --github-desktop-color: #6e5494;
+    --github-desktop-color: #8034A9;
     /* --facebook-color: #1877f2; */
     --discord-color: #7289da;
     --youtube-color: #ff0000;
